globus-xio-pipe-driver (3.4-3+gt6.@distro@) @distro@; urgency=low

  * Filelist fix for unversioned .so

 -- Globus Toolkit <support@globus.org>  Thu, 24 April 2014 11:17:06 -0400

globus-xio-pipe-driver (3.4-2+gt6.@distro@) @distro@; urgency=low

  * Filelist fix for unversioned .so

 -- Globus Toolkit <support@globus.org>  Thu, 24 April 2014 10:05:05 -0400

globus-xio-pipe-driver (3.4-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:30 -0400

globus-xio-pipe-driver (3.3-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:56 -0400

globus-xio-pipe-driver (3.2-2+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup

 -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:41 -0500

globus-xio-pipe-driver (3.2-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Fri, 14 Feb 2014 08:58:07 -0500

globus-xio-pipe-driver (3.1-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes

 -- Globus Toolkit <support@globus.org>  Wed, 12 Feb 2014 15:39:00 -0500

globus-xio-pipe-driver (3.0-1+gt6.@distro@) @distro@; urgency=low

  * Repackage for GT6 without GPT

 -- Globus Toolkit <support@globus.org>  Tue, 21 Jan 2014 13:22:07 -0500

globus-xio-pipe-driver (2.2-2) unstable; urgency=low

  * GT 5.2.2 final

 -- Globus Toolkit <support@globus.org>  Mon, 16 Jul 2012 15:25:43 -0400

globus-xio-pipe-driver (2.2-1) unstable; urgency=low

  * RIC-226: Some dependencies are missing in GPT metadata
  * RIC-229: Clean up GPT metadata

 -- Globus Toolkit <support@globus.org>  Tue, 14 Feb 2012 14:44:01 -0500

globus-xio-pipe-driver (2.1-2) unstable; urgency=low

  * Update for 5.2.0 release

 -- Globus Toolkit <support@globus.org>  Mon, 05 Dec 2011 17:42:01 -0500

globus-xio-pipe-driver (2.1-1) unstable; urgency=low
