@@ -9,7 +9,6 @@ AM_CPPFLAGS = $(PACKAGE_DEP_CFLAGS)
 libglobus_xio_pipe_driver_la_LIBADD = $(PACKAGE_DEP_LIBS)
 libglobus_xio_pipe_driver_la_SOURCES = globus_xio_pipe_driver.c
 libglobus_xio_pipe_driver_la_LDFLAGS = \
-	-version-info $(MAJOR_VERSION):$(MINOR_VERSION):$(AGE_VERSION) \
         -no-undefined \
         -avoid-version \
         -module -rpath $(libdir)
