@@ -9,7 +9,7 @@ AM_CPPFLAGS = $(PACKAGE_DEP_CFLAGS)
 libglobus_xio_popen_driver_la_LIBADD = $(PACKAGE_DEP_LIBS)
 libglobus_xio_popen_driver_la_SOURCES = globus_xio_popen_driver.c
 libglobus_xio_popen_driver_la_LDFLAGS = \
-        -version-info $(MAJOR_VERSION):$(MINOR_VERSION):$(AGE_VERSION) \
+        -avoid-version \
         -no-undefined \
 	-module -rpath $(libdir)
 
