@@ -1,3 +1,9 @@
+globus-xio-popen-driver (3.3-1+gt6.@distro@) @distro@; urgency=low
+
+  * Don't version dynamic module
+
+ -- Globus Toolkit <support@globus.org>  Tue, 06 May 2014 08:40:26 -0400
+
 globus-xio-popen-driver (3.2-2+gt6.@distro@) @distro@; urgency=low
 
   * Fix filelist for unversioned .so
