@@ -1,3 +1,9 @@
+globus-xio-pipe-driver (3.5-1+gt6.@distro@) @distro@; urgency=low
+
+  * Don't version dynamic module
+
+ -- Globus Toolkit <support@globus.org>  Tue, 06 May 2014 08:40:22 -0400
+
 globus-xio-pipe-driver (3.4-3+gt6.@distro@) @distro@; urgency=low
 
   * Filelist fix for unversioned .so
